--- a/featurestyle.css
+++ b/featurestyle.css
@@ -348,7 +348,8 @@ li::before {
   text-align: center !important;
   white-space: nowrap;
   vertical-align: middle !important;
-  border: 1px solid !important;
+  border-style: solid !important;
+  border-width: 1px !important;
   padding: 0.5rem !important;
   font-size: 1rem !important;
   line-height: 1.5 !important;
