--- a/css/featurestyle.css
+++ b/css/featurestyle.css
@@ -350,6 +350,11 @@ li::before {
   text-decoration: none;
   margin-bottom: 10px;
 }
+.listheader {
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1.1;
+}
 
 .button {
   font-weight: 400 !important;
