--- a/css/featurestyle.css
+++ b/css/featurestyle.css
@@ -32,6 +32,7 @@
 ul.reg-ul-green li::before {
   content: "\2022" !important;
   color: #374f3f !important;
+  top: 0.05em !important;
   font-weight: bold;
   display: inline-block;
   width: 1rem;
@@ -41,6 +42,7 @@ ul.reg-ul-green li::before {
 ul.reg-ul-blue li::before {
   content: "\2022" !important;
   color: #31537a !important;
+  top: 0.05em !important;
   font-weight: bold;
   display: inline-block;
   width: 1rem;
@@ -50,6 +52,7 @@ ul.reg-ul-blue li::before {
 ul.reg-ul-red li::before {
   content: "\2022" !important;
   color: #540300 !important;
+  top: 0.05em !important;
   font-weight: bold;
   display: inline-block;
   width: 1rem;
