--- a/css/featurestyle.css
+++ b/css/featurestyle.css
@@ -430,6 +430,18 @@ li::before {
   text-shadow: 1px 1px 8px #000;
 }
 
+.title-block-shaded {
+  width: 100%;
+  padding-right: 7px;
+  padding-left: 7px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 8px #000;
+  background: linear-gradient(to right,transparent 0%,rgba(0,0,0,.48) 20%,rgba(0,0,0,.48) 80%,transparent 100%);
+}
+
 div.title-block h1 {
   font-size: 2.5rem;
   color: #fff !important;
