--- a/css/featurestyle.css
+++ b/css/featurestyle.css
@@ -63,6 +63,7 @@ ul.reg-ul-red li::before {
   font-size: 12px;
 }
 
+/* delete */
 div.card {
 position: relative;
 display: flex;
@@ -72,6 +73,19 @@ background-clip: border-box;
 border: 1px solid rgba(0, 0, 0, 0.125);
 border-radius: 0.17rem;
 box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+}
+
+.header-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.17rem;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  margin: -120px 14px 0 14px;
+  padding: 10px;
 }
 
 .fa-li {
